[metadata]
name = axpert_monitor
version = 1.0.0
author = ArnyminerZ
author_email = arnyminer.z@gmail.com
description = A package for communicating to Axpert Inverters, and publishing the gotten data to EmonCMS or MQTT.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArnyminerZ/Axpert-Monitor
project_urls =
    Bug Tracker = https://github.com/ArnyminerZ/Axpert-Monitor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src